--- a/template/index.html
+++ b/template/index.html
@@ -17,6 +17,32 @@
 
   <body>
    <!--site body begins -->
+       <!--Main Navigation-->
+      <header>
+
+          <!--navbar-->
+          <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+              <div class="container">
+                  <a class="navbar-brand"  href="#"><strong>WEConnect</strong></a>
+                  <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7"  aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
+                      <ul class="navbar-nav mr-auto">
+                          <li class="nav-item active">
+                              <a class="nav-link" href="#">Home<span class="sr-only">(current)</span>></a>
+                          </li>
+                          <li class="nav-item">
+                              <a  class="nav-link"  data-toggle="modal" data-target="#signInmodal" href="#">Sign-in></a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="#" data-toggle="modal" data-target="#signUpModal">Sign-up></a>
+                          </li>
+                      </ul>
+                 </div>
+              </div>
+          </nav>
+      </header>
 
 
        <!-- Jquery First, Bootstrap js. -->
