added a brief intro about WEcoonect on the homepage

--- a/template/index.html
+++ b/template/index.html
@@ -63,6 +63,25 @@
             </div>
 
           </header>
+        <!--Main Navigation-->
+
+      <!--Main Layout-->
+      <main>
+          <div class="container">
+
+              <!--grid row-->
+              <div class="row py-5 mt-4">
+
+                  <!--grid column-->
+                  <div class="col-md-12 text-center">
+                      <p>WeConnect provides a platform that brings businesses and individuals together.<br/>
+                          This platform creates awareness for businesses and gives the users the ability to write reviews about the businesses they have interacted with.
+                      </p>
+                  </div>
+              </div>
+          </div>
+
+      </main>
 
 
        <!-- Jquery First, Bootstrap js. -->
