--- a/template/index.html
+++ b/template/index.html
@@ -78,10 +78,45 @@
                           This platform creates awareness for businesses and gives the users the ability to write reviews about the businesses they have interacted with.
                       </p>
                   </div>
+                  <!--grid column-->
+
               </div>
+              <!--grid row-->
+
           </div>
 
-      </main>
+         <!--Sign-In Modal-->
+          <div class="modal fade" id="signInmodal" tabindex="-1" role="dialog" aria-labelledby="signInmodal" aria-hidden="true">
+              <div  class="modal-dialog" role="document">
+                  <div class="modal-content">
+                      <div class="modal-header">
+                          <h5 class="modal-title text-primary" id="signInmodal">Sign-In</h5>
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                  <span aria-hidden="true">&times;</span>
+                              </button>
+                      </div>
+                              <div class="modal-body">
+                                  <form>
+                                      <div class="form-group">
+                                          <label for="InputEmail1">Email address></label>
+                                          <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.></small>
+                                      </div>
+                                      <div class="form-group">
+                                          <label for="InputPassword1">Password></label>
+                                          <input type="password" class="form-control" id="InputPassword1" placeholder="Password">
+                                      </div>
+                                      <div class="form-check">
+                                          <input type="checkbox" class="form-check-input" id="Check1">
+                                          <label class="form-check-label" for="Check1">Remember me></label>
+                                      </div>
+                                      <button type="submit" class="btn btn-primary">Submit></button>
+                                  </form>
+                               </div>
+                          </div>
+                      </div>
+                  </div>
+            </main>
 
 
        <!-- Jquery First, Bootstrap js. -->
