--- a/template/index.html
+++ b/template/index.html
@@ -116,7 +116,82 @@
                           </div>
                       </div>
                   </div>
-            </main>
+
+          <!--sign-up modal-->
+          <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="signUpModal" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                      <div class="modal-header">
+                          <h5 class="modal-title text-primary" id="signUpModal">Register></h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;></span>
+                          </button>
+                      </div>
+                      <div class="modal-body">
+                          <form>
+                              <div class="form-row">
+                                  <div class="form-group col-md-6">
+                                      <label for="inputEmail4">Email></label>
+                                      <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                                  </div>
+                                  <div class="form-group col-md-6">
+                                      <label for="username">Username></label>
+                                      <input type="text" class="form-control" id="username" placeholder="Username">
+                                  </div>
+                              </div>
+                              <div class="form-row">
+                                  <div class="form-group col-md-6">
+                                      <label for="fName">First Name></label>
+                                      <input type="text" class="form-control" id="fName" placeholder="First Name">
+                                  </div>
+                                  <div class="form-group col-md-6">
+                                      <label for="lName">Last Name></label>
+                                      <input type="text" class="form-control" id="lName" placeholder="Last Name">
+                                  </div>
+                              </div>
+                              <div class="form-row">
+                                  <div class="form-group col-md-6">
+                                      <label for="inputPassword4">Password></label>
+                                      <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+                                  </div>
+                                  <div class="form-group col-md-6">
+                                      <label for="inputPassword4">Confirm Password</label>
+                                      <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+                                  </div>
+                              </div>
+                              <div class="form-group">
+                                  <label for="inputAddress">Address</label>
+                                  <input type="text" class="form-control" id="inputAddress" placeholder="17 ayanleye Ogba">
+                              </div>
+                              <div class="form-group">
+                                  <label for="inputAddress2">Address 2</label>
+                                  <input type="text" class="form-control" id="inputAddress2" placeholder="first floor">
+                                  <div  class="form-row">
+                                      <div class="form-group col-md-6">
+                                          <label for="inputCity">City</label>
+                                          <input type="text" class="form-control" id="inputCity">
+                                      </div>
+                                      <div class="form-group col-md-4">
+                                          <label for="inputState">State</label>
+                                          <select id="inputState" class="form-control">
+                                              <option selected>Choose...</option>
+                                              <option>...</option>
+                                          </select>
+                                      </div>
+                                      <div class="form-group col-md-2">
+                                          <label for="inputZip">Zip</label>
+                                          <input type="text" class="form-control" id="inputZip">
+                                      </div>
+                                  </div>
+                                  <button type="submit" class="btn btn-primary">sign up</button>
+                              </div>
+                          </form>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+       </main>
 
 
        <!-- Jquery First, Bootstrap js. -->
