--- a/template/index.html
+++ b/template/index.html
@@ -9,7 +9,8 @@
       <title>WEcoonect web app</title>
 
       <!-- bootstrap css -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+  crossorigin="anonymous">
       <!--Custom Css-->
         <link rel="stylesheet" type="text/css" href="./css/styles.css">
 
@@ -23,7 +24,7 @@
           <!--navbar-->
           <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
               <div class="container">
-                  <a class="navbar-brand"  href="#"><strong>WEConnect</strong></a>
+                  <a class="navbar-brand" href="#"><strong>WEConnect</strong></a>
                   <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7"  aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                   </button>
@@ -33,7 +34,7 @@
                               <a class="nav-link" href="#">Home<span class="sr-only">(current)</span>></a>
                           </li>
                           <li class="nav-item">
-                              <a  class="nav-link"  data-toggle="modal" data-target="#signInmodal" href="#">Sign-in></a>
+                              <a class="nav-link"  data-toggle="modal" data-target="#signInmodal" href="#">Sign-in></a>
                           </li>
                           <li class="nav-item">
                               <a class="nav-link" href="#" data-toggle="modal" data-target="#signUpModal">Sign-up></a>
@@ -190,12 +191,43 @@
                   </div>
               </div>
           </div>
+          <!-- carousel -->
+          <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                  <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselIndicators" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner text-center">
+                  <div class="carousel-item active">
+                      <img class="image-fluid" src="./images/image8.jpg" alt="max-width 10%">
+                  </div>
+                  <div class="carousel-item">
+                      <img class="image-fluid" src="./images/image7.jpg" alt="max-width 10%">
+                  </div>
+                  <div class="carousel-item">
+                      <img class="image-fluid" src="./images/image9.jpg" alt="max-width 10%">
+                  </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+              </a>
+          </div>
 
        </main>
+      <!-- carousel -->
+      <!-- main layout -->
 
-
-       <!-- Jquery First, Bootstrap js. -->
+      <script src="./js/main.js"></script>
+     <!-- Jquery First, then popper.js Bootstrap js. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"                          crossorigin="anonymous"></script>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+  crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-     vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
   </body>
