--- a/template/index.html
+++ b/template/index.html
@@ -223,6 +223,23 @@
       <!-- carousel -->
       <!-- main layout -->
 
+      <!-- footer -->
+      <footer >
+            <div class="footer">
+                <div class="row">
+                    <div class="columns medium-12 small-12">
+                        <ul>
+                            <li><a href="#">Terms and conditions</a></li>
+                            <li><a href="#">Privacy policy</a></li>
+                            <li><a href="#">Content guidelines</a></li>
+                            <li><a href="#">Contact us</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+      </footer>
+       <!-- Optional JavaScript -->
+       <!-- Custom  Javascript -->
       <script src="./js/main.js"></script>
      <!-- Jquery First, then popper.js Bootstrap js. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"                          crossorigin="anonymous"></script>
