--- a/template/css/styles.css
+++ b/template/css/styles.css
@@ -51,3 +51,17 @@ h5 {
         height: 90%;
     }
 }
+
+.image-fluid {
+    height: 50%;
+    width: 50%;
+    
+}
+
+#carouselIndicators {
+    background-color:lightgrey;
+}
+
+#mainNav {
+    background-color:black;
+}
