--- a/template/index.html
+++ b/template/index.html
@@ -19,34 +19,27 @@
 <body>
     <!--site body begins -->
     <!--Main Navigation-->
-    <header>
+    
 
         <!--navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
-            <div id="mainNav" class="container">
-                <a class="navbar-brand" href="#">
-                    <strong>WEConnect</strong>
-                </a>
-                <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home
-                                <span class="sr-only">(current)</span>></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class=" nav-link" data-toggle="modal" data-target="#signInmodal" href="#">Sign-in></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" data-toggle="modal" data-target="#signUpModal">Sign-up></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <body>
+            <header class="sticky-top">
+                <nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
+                    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <a id="navBarAppTitle" class="navbar-brand" href="#">This will be changed to the APP_TITLE by main.js</a>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-item nav-link active" href="#">Home
+                                <span class="sr-only">(current)</span>
+                            </a>
+                            <a class="nav-item nav-link" href="#">Sign In</a>
+                            <a class="nav-item nav-link" href="#">Sign Up</a>
+                        </div>
+                    </div>
+                </nav>
 
         <!--Intro Section-->
         <div class="view hm-black-light jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url(./images/image10.jpg);">
