--- a/template/index.html
+++ b/template/index.html
@@ -55,147 +55,50 @@
         <!--Main Navigation-->
 
         <!--Main Layout-->
-        <main>
-            <div class="container">
+        <main class="container-fluid">
+            <p class="col-md-12">WeConnect provides a platform that brings businesses and individuals together. This platform creates awareness
+                for businesses and gives the users the ability to write reviews about the businesses they have interacted
+                with. </p>
 
-                <!--grid row-->
-                <div class="row py-5 mt-4">
 
-                    <!--grid column-->
-                    <div class="col-md-12 text-center">
-                        <p>WeConnect provides a platform that brings businesses and individuals together.
-                            <br/> This platform creates awareness for businesses and gives the users the ability to write reviews
-                            about the businesses they have interacted with.
-                        </p>
-                    </div>
-                    <!--grid column-->
 
-                </div>
-                <!--grid row-->
-
-            </div>
-
-            <!--Sign-In Modal-->
-            <div class="modal fade" id="signInmodal" tabindex="-1" role="dialog" aria-labelledby="signInmodal" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title text-primary" id="signInmodal">Sign-In</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <form>
-                                <div class="form-group">
-                                    <label for="InputEmail1">Email address></label>
-                                    <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.></small>
-                                </div>
-                                <div class="form-group">
-                                    <label for="InputPassword1">Password></label>
-                                    <input type="password" class="form-control" id="InputPassword1" placeholder="Password">
-                                </div>
-                                <div class="form-check">
-                                    <input type="checkbox" class="form-check-input" id="Check1">
-                                    <label class="form-check-label" for="Check1">Remember me></label>
-                                </div>
-                                <button type="submit" class="btn btn-primary">Submit></button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!--sign-up modal-->
-            <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="signUpModal" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title text-primary" id="signUpModal">Register></h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;></span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <form>
-                                <div class="form-row">
-                                    <div class="form-group col-md-6">
-                                        <label for="inputEmail4">Email></label>
-                                        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-                                    </div>
-                                    <div class="form-group col-md-6">
-                                        <label for="username">Username></label>
-                                        <input type="text" class="form-control" id="username" placeholder="Username">
-                                    </div>
-                                </div>
-                                <div class="form-row">
-                                    <div class="form-group col-md-6">
-                                        <label for="fName">First Name></label>
-                                        <input type="text" class="form-control" id="fName" placeholder="First Name">
-                                    </div>
-                                    <div class="form-group col-md-6">
-                                        <label for="lName">Last Name></label>
-                                        <input type="text" class="form-control" id="lName" placeholder="Last Name">
-                                    </div>
-                                </div>
-                                <div class="form-row">
-                                    <div class="form-group col-md-6">
-                                        <label for="inputPassword4">Password></label>
-                                        <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
-                                    </div>
-                                    <div class="form-group col-md-6">
-                                        <label for="inputPassword4">Confirm Password</label>
-                                        <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="inputAddress">Address</label>
-                                    <input type="text" class="form-control" id="inputAddress" placeholder="17 ayanleye Ogba">
-                                </div>
-                                <div class="form-group">
-                                    <label for="inputAddress2">Address 2</label>
-                                    <input type="text" class="form-control" id="inputAddress2" placeholder="first floor">
-                                    <div class="form-row">
-                                        <div class="form-group col-md-6">
-                                            <label for="inputCity">City</label>
-                                            <input type="text" class="form-control" id="inputCity">
-                                        </div>
-                                        <div class="form-group col-md-4">
-                                            <label for="inputState">State</label>
-                                            <select id="inputState" class="form-control">
-                                                <option selected>Choose...</option>
-                                                <option>...</option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group col-md-2">
-                                            <label for="inputZip">Zip</label>
-                                            <input type="text" class="form-control" id="inputZip">
-                                        </div>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary">sign up</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <!-- carousel -->
-            <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide" data-interval="3000" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselIndicators" data-slide-to="1"></li>
                     <li data-target="#carouselIndicators" data-slide-to="2"></li>
+                    <li data-target="#carouselIndicators" data-slide-to="3"></li>
                 </ol>
-                <div class="carousel-inner text-center">
+                <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <img class="image-fluid" src="./images/image8.jpg" alt="Description oof Image">
+                        <img class="d-block img-fluid" src="./images/image01.jpg" alt="First slide">
+                        <div class="carousel-caption d-none d-sm-block">
+                            <h2 class="jumboCaption1">People</h2>
+                            <p>We Connect</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="image-fluid" src="./images/image7.jpg" alt="max-width 10%">
+                        <img class="img-fluid" src="./images/image02.jpg" alt="Second slide">
+
+                        <div class="carousel-caption d-none d-sm-block">
+                            <h2>Our Clients</h2>
+                            <p>We Listen</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="image-fluid" src="./images/image9.jpg" alt="max-width 10%">
+                        <img class="img-fluid" src="./images/image03.jpg" alt="Third slide">
+                        <div class="carousel-caption d-none d-sm-block">
+                            <h2>Your Vision</h2>
+                            <p>We See It</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="img-fluid" src="./images/image04.jpg" alt="fourth slide">
+                        <div class="carousel-caption d-none d-sm-block">
+                            <h2>Technology</h2>
+                            <p>We Have It</p>
+                        </div>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
@@ -208,32 +111,9 @@
                 </a>
             </div>
 
-        </main>
-        <!-- carousel -->
-        <!-- main layout -->
+            <!-- carousel -->
 
-        <!-- footer -->
-        <footer>
-            <div class="footer">
-                <div class="row">
-                    <div class="columns medium-12 small-12">
-                        <ul>
-                            <li>
-                                <a href="#">Terms and conditions</a>
-                            </li>
-                            <li>
-                                <a href="#">Privacy policy</a>
-                            </li>
-                            <li>
-                                <a href="#">Content guidelines</a>
-                            </li>
-                            <li>
-                                <a href="#">Contact us</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+        </main>
         </footer>
         <!-- Optional JavaScript -->
         <!-- Custom  Javascript -->
