--- a/template/index.html
+++ b/template/index.html
@@ -114,7 +114,43 @@
             <!-- carousel -->
 
         </main>
-        </footer>
+         <!--Footer-->
+    <footer class="pt-4 mt-4">
+
+        <!--Footer Links-->
+        <div class="container-fluid text-center text-md-left">
+            <div class="row">
+
+                <!--First column-->
+                <div class="col-md-6">
+                    <h5 id="footerAppTitle" class="text-uppercase">Footer Content</h5>
+                    <p>Connecting People... What are you waiting for?</p>
+                </div>
+                <!--/.First column-->
+
+                <!--Second column-->
+                <div class="col-md-6">
+                    <h5 class="text-uppercase">Useful Links</h5>
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!">Terms and Conditions</a>
+                        </li>
+                        <li>
+                            <a href="#!">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="#!">Contents Guidelines</a>
+                        </li>
+                        <li>
+                            <a href="#!">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--/.Second column-->
+            </div>
+        </div>
+        <!--/.Footer Links-->
+        <hr />
         <!-- Optional JavaScript -->
         <!-- Custom  Javascript -->
         <script src="./js/main.js"></script>
