added copyright to footer

--- a/template/index.html
+++ b/template/index.html
@@ -151,6 +151,18 @@
         </div>
         <!--/.Footer Links-->
         <hr />
+         <!--Copyright-->
+         <div class="footer-copyright py-3 text-center">
+            <div class="container-fluid">
+                © 2018 Copyright:
+                <span id="copyright"> MDBootstrap.com </sp>
+
+            </div>
+        </div>
+        <!--/.Copyright-->
+
+    </footer>
+    <!--/.Footer-->
         <!-- Optional JavaScript -->
         <!-- Custom  Javascript -->
         <script src="./js/main.js"></script>
