--- a/template/index.html
+++ b/template/index.html
@@ -27,9 +27,13 @@
                         <span class="sr-only">(current)</span>
                     </a>
                     <a class="nav-item nav-link" href="#">Sign In</a>
-                    <a class="nav-item nav-link" href="#">Sign Up</a>
+                    <a class="nav-item nav-link" href="./sign-up.html">Sign Up</a>
                 </div>
             </div>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search businesses" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </nav>
     </header>
     <div class="jumbotron jumbotron-fluid">
