fix the bootstrap link

--- a/template/index.html
+++ b/template/index.html
@@ -8,8 +8,8 @@
     <meta http-equiv="x-ua-compatible" content="ie-edge">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 
@@ -27,7 +27,7 @@
                         <span class="sr-only">(current)</span>
                     </a>
                     <a class="nav-item nav-link" href="#">Sign In</a>
-                    <a class="nav-item nav-link" href="./sign-up.html">Sign Up</a>
+                    <a class="nav-item nav-link" href="#">Sign Up</a>
                 </div>
             </div>
             <form class="form-inline my-2 my-lg-0">
