--- a/template/index.html
+++ b/template/index.html
@@ -48,7 +48,7 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2 fluid" type="search" placeholder="What do you need?" aria-label="Search">
+                    <input class="form-control mr-sm-2 fluid" type="search" placeholder="search business" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
