--- a/template/index.html
+++ b/template/index.html
@@ -83,7 +83,7 @@
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
-                    <img class="d-block img-fluid" src="./images/image01.jpg" alt="First slide">
+                    <img class="d-block img-fluid" src="./images/fashion-image01.jpg" alt="First slide">
                     <div class="carousel-caption d-none d-sm-block">
                         <h2 class="jumboCaption1">People</h2>
                         <p>We Connect</p>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="img-fluid" src="./images/image03.jpg" alt="Third slide">
+                    <img class="img-fluid" src="./images/vacation-image.jpg" alt="Third slide">
                     <div class="carousel-caption d-none d-sm-block">
                         <h2>Your Vision</h2>
                         <p>We See It</p>
