added some features at recently added businesses

--- a/template/index.html
+++ b/template/index.html
@@ -87,10 +87,10 @@
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
-                            <img class="d-block img-fluid" src="./images/fashion-image01.jpg" alt="First slide">
+                            <img class="d-block img-fluid" src="./images/fashion.jpg" alt="First slide">
                             <div class="carousel-caption d-none d-sm-block">
-                                <h2 class="jumboCaption1">People</h2>
-                                <p>We Connect</p>
+                                <h2 class="jumboCaption1">fashion</h2>
+                                <p>We own it</p>
                             </div>
                         </div>
                         <div class="carousel-item">
@@ -131,31 +131,33 @@
 
             <aside class="col-md-2 order-md-1">
                 <h2 class="d-md-none h3 text-center p-1 mt-4 bg-dark colorWhite">
-                    Featured Businesses
+                    recently added Businesses
                 </h2>
                 <div class="card text-center mb-2">
-                    <img class="card-img-top" src="./images/sample-business-image.jpg" alt="Business Image">
+                    <h3 class="card-title">chuks cosmetics</h3>
+                    <img class="card-img-top" src="./images/beauty/beauty-image.jpg" alt="Business Image">
+                    <img class="card-img-top" src="./images/beauty/beauty-image01.jpg" alt="Business Image">
+                    <img class="card-img-top" src="./images/beauty/beauty-image02.jpg" alt="Business Image">
                     <div class="card-body">
-                        <h5 class="card-title">Business Name</h5>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, magni ut. Aliquam, harum minima
-                            ea alias voluptatem non repudiandae! Animi inventore quidem nam dolorem totam id placeat qu</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">chuks Cosmetics offers makeup, skincare and beauty products made with high-performance naturals.
+                            <br
+                            /> Discover our cruelty-free and eco-friendly makeup today. chuks cosmetics.</p>
+                        <a href="#" class="btn btn-primary">find us</a>
                     </div>
                     <div class="card-footer text-muted">
                         2 days ago
                     </div>
                 </div>
                 <div class="card text-center mb-2">
-                    <img class="card-img-top" src="./images/sample-business-image.jpg" alt="Business Image">
+                    <h5 class="card-title">Amaechi Automobile</h5>
+                    <img class="card-img-top" src="./images/automobile/automobile01.jpg" alt="Business Image">
+                    <img class="card-img-top" src="./images/automobile/automobile02.jpg" alt="Business Image">
+                    <img class="card-img-top" src="./images/automobile/automobile03.jpg" alt="Business Image">
                     <div class="card-body">
-                        <h5 class="card-title">Business Name</h5>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, magni ut. Aliquam, harum minima
-                            ea alias voluptatem non repudiandae! Animi inventore quidem nam dolorem totam id placeat qu</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">Welcome  to Afeluxury Automobile, where you can get your extremely clean and affordable car at a great price</p>
+                        <a href="#" class="btn btn-primary">find us</a>
                     </div>
-                    <div class="card-footer text-muted">
-                        2 days ago
-                    </div>
+                    
                 </div>
             </aside>
 
