added some features

--- a/template/index.html
+++ b/template/index.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home
+                    <a class="nav-link" href="index.html">Home
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
@@ -34,13 +34,15 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         <span class="weconnect">
-                            <span class="we">We</span>Connect</span> Business Listings
+                            <span class="we">We</span>Connect</span>  Join Us 
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-header">Top Performers</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="#">business 1</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="#">business 1</a>
-                        <a businessID="" class="dropdown-item text-capitalize" href="#">business 1</a>
+                        <a class="dropdown-header">Top businesses</a>
+                        <a businessID="" class="dropdown-item text-capitalize" href="sign-up.html">sign-up</a>
+                        <a businessID="" class="dropdown-item text-capitalize" href="sign-in.html">sign-in</a>
+                        <a businessID="" class="dropdown-item text-capitalize" href="Register-business.html">Register business</a>
+                        <a businessID="" class="dropdown-item text-capitalize" href="#">Travel</a>
+                        <a businessID="" class="dropdown-item text-capitalize" href="#">health</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Yellow Pages</a>
 
@@ -48,11 +50,12 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2 fluid" type="search" placeholder="search business" aria-label="Search">
+                <input class="form-control mr-sm-2 fluid" type="search" placeholder="search businesses" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
     </nav>
+
 
     <div class="jumbotron jumbotron-fluid">
         <div class="justify-content-center row">
@@ -130,61 +133,75 @@
             </main>
 
             <aside class="col-md-2 order-md-1">
-                <h2 class="d-md-none h3 text-center p-1 mt-4 bg-dark colorWhite">
-                    recently added Businesses
+                <h2 class="d-md-none h3 text-center p-1 mt-4 bg-dark colorWhite"></h2>
+                <b>recently added Businesses</b>
                 </h2>
+
+
                 <div class="card text-center mb-2">
-                    <h3 class="card-title">chuks cosmetics</h3>
+                    <h3 class="card-title">
+                        <b></b>Chuks Cosmetics</b>
+                    </h3>
                     <img class="card-img-top" src="./images/beauty/beauty-image.jpg" alt="Business Image">
                     <img class="card-img-top" src="./images/beauty/beauty-image01.jpg" alt="Business Image">
                     <img class="card-img-top" src="./images/beauty/beauty-image02.jpg" alt="Business Image">
                     <div class="card-body">
                         <p class="card-text">chuks Cosmetics offers makeup, skincare and beauty products made with high-performance naturals.
-                            <br
-                            /> Discover our cruelty-free and eco-friendly makeup today. chuks cosmetics.</p>
-                        <a href="#" class="btn btn-primary">find us</a>
+                            <br /> Discover our cruelty-free and eco-friendly makeup today. chuks cosmetics.</p>
+                        <a href="recentlyaddbiz.html" class="btn btn-primary">recently added</a>
                     </div>
-                    <div class="card-footer text-muted">
-                        2 days ago
-                    </div>
+
                 </div>
+
                 <div class="card text-center mb-2">
-                    <h5 class="card-title">Amaechi Automobile</h5>
+                    <h3 class="card-title">
+                        <b>Amaechi Automobile</b>
+                    </h3>
                     <img class="card-img-top" src="./images/automobile/automobile01.jpg" alt="Business Image">
                     <img class="card-img-top" src="./images/automobile/automobile02.jpg" alt="Business Image">
                     <img class="card-img-top" src="./images/automobile/automobile03.jpg" alt="Business Image">
                     <div class="card-body">
-                        <p class="card-text">Welcome  to Afeluxury Automobile, where you can get your extremely clean and affordable car at a great price</p>
-                        <a href="#" class="btn btn-primary">find us</a>
+                        <p class="card-text">Welcome to Amaechi Automobile, where you can get your extremely clean and affordable car at a great
+                            price
+                        </p>
+                        <a href="#" class="btn btn-primary">find out more</a>
                     </div>
-                    
+
                 </div>
             </aside>
 
             <aside class="col-md-2 order-md-12">
                 <div class="card text-center mb-2">
-                    <img class="card-img-top" src="./images/sample-business-image.jpg" alt="Business Image">
+                    <h3 class="card-title">
+                        <b>Love solutions</b>
+                    </h3>
+                    <img class="card-img-top" src="./images/recur/recur-image01.jpg" alt="Business Image">
+                    <img class="card-img-top" src="./images/recur/recur-image02.jpg" alt="Business Image">
+                    <img class="card-img-top" src="./images/recur/recur-image03.jpg" alt="Business Image">
                     <div class="card-body">
-                        <h5 class="card-title">Business Name</h5>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, magni ut. Aliquam, harum minima
-                            ea alias voluptatem non repudiandae! Animi inventore quidem nam dolorem totam id placeat qu</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">Love Solutions is an indigenous dynamic Technology firm with
+                            <br /> reputation in deploying screening and assessment solutions.</p>
+                        <p> We specialize in implementing computer-based screenings and
+                            <br /> deploying bespoke recruitment hiring tools. Dragnet-Solutions provide employment and educational
+                            solutions for a variety of uses. </p>
+                        <a href="#" class="btn btn-primary">find out more</a>
                     </div>
-                    <div class="card-footer text-muted">
-                        2 days ago
-                    </div>
+
                 </div>
                 <div class="card text-center mb-2">
-                    <img class="card-img-top" src="./images/sample-business-image.jpg" alt="Business Image">
+                    <h5 class="card-title">flystar</h5>
+                    <img class="card-img-top" src="./images/travel/travel.jpg" alt="Business Image">
+                    <img class="card-img-top" src="./images/travel/travel.03.jpg" alt="Business Image">
+                    <img class="card-img-top" src="./images/travel/travel01.jpg" alt="Business Image">
                     <div class="card-body">
-                        <h5 class="card-title">Business Name</h5>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, magni ut. Aliquam, harum minima
-                            ea alias voluptatem non repudiandae! Animi inventore quidem nam dolorem totam id placeat qu</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">flystar is Africa’s leading online travel agency. Based in Lagos, we have offices across Africa and
+                            the Middle East where hundreds of flystar are dedicated to rocking your travel world.
+                            <p> We want our customers to spend less time planning their travels and more time on holiday. Our
+                                mission is to save you time, money and stress with our simple online booking platform</p>
+                        </p>
+                        <a href="#" class="btn btn-primary">find out more</a>
                     </div>
-                    <div class="card-footer text-muted">
-                        2 days ago
-                    </div>
+
                 </div>
             </aside>
         </div>
@@ -192,7 +209,7 @@
 
 
     <!--Footer-->
-    <footer class="pt-4 mt-4">
+    <footer class="pt-4 mt-4 bg-dark">
 
         <!--Footer Links-->
         <div class="container-fluid text-center text-md-left">
@@ -200,7 +217,8 @@
 
                 <!--First column-->
                 <div class="col-md-6">
-                    <h5 id="footerAppTitle" class="text-uppercase">Footer Content</h5>
+                    <h5 id="footerAppTitle" class="text-uppercase weconnect">
+                        <span class="we">We</span>Connect</h5>
                     <p>Connecting People... What are you waiting for?</p>
                 </div>
                 <!--/.First column-->
@@ -232,7 +250,7 @@
         <div class="footer-copyright py-3 text-center">
             <div class="container-fluid">
                 © 2018 Copyright:
-                <span id="copyright"> MDBootstrap.com </sp>
+                <span id="copyright"> Amaechi-chuks.com </sp>
 
             </div>
         </div>
