--- a/template/index.html
+++ b/template/index.html
@@ -250,7 +250,7 @@
         <div class="footer-copyright py-3 text-center">
             <div class="container-fluid">
                 © 2018 Copyright:
-                <span id="copyright"> Amaechi-chuks.com </sp>
+                <span id="copyright"> Amaechi </sp>
 
             </div>
         </div>
