--- a/template/sign-up.html
+++ b/template/sign-up.html
@@ -361,7 +361,7 @@
                     <div class="footer-copyright py-3 text-center">
                         <div class="container-fluid">
                             © 2018 Copyright:
-                            <span id="copyright"> Amaechi-chuks.com </sp>
+                            <span id="copyright"> Amaechi </sp>
 
                         </div>
                     </div>
